small but in homepage positioning with scrollbar, let's see if this fixes it

--- a/myapp/static/myapp/css/home.css
+++ b/myapp/static/myapp/css/home.css
@@ -8,7 +8,7 @@
 
 .myslide {
   height: calc(100vh - (0.14745308311 * 480px * 2) - 40px);
-  width: 100vw;
+  width: 100%;
   max-height: 620px;
   opacity: 0;
   position: absolute;
